--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <!-- The tab title shown in the browser. -->
   <title>InspireMe — Random Quote Generator</title>
   <!-- Link our stylesheet file to style this page. -->
-  <link rel="stylesheet" href="quote-widget.css" />
+  <link rel="stylesheet" href="styles.css" />
   <!-- Load our JS *after* HTML is parsed so elements exist when JS runs. -->
-  <script src="quote-widget.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 
 <!-- The visible content of the page starts here. -->
