--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- The root element of an HTML page; lang="en" helps screen readers and SEO. -->
 <html lang="en">
 <head>
-  <!-- Sets the character encoding so all characters (like quotes “ ”) render correctly. -->
+  <!-- Sets the character encoding so all characters (like quotes " ") render correctly. -->
   <meta charset="UTF-8" />
   <!-- Ensures proper scaling on phones: width = device width; initial zoom = 1. -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
